ingress/ingressrule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  tls:
    - hosts:
        - test.test.com
      secretName: tls-secret
  rules:
    - host: test.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /users
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 8080
